<resources>
    <string name="app_name">EventFinderAndroid</string>
    <string name="login_str">Login</string>
    <string name="register_str">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="submit_str">Submit</string>
    <string name="title_place_holder">Event name</string>
    <string name="last_msg_place_holder">description</string>
    <string name="add_event_address">Address</string>
    <string name="add_event_pick_location_desc">Pick location</string>
    <string name="add_event_type">Event type</string>
    <string name="add_event_date">Event time</string>
    <string name="add_event_choose_date_btn">Pick time</string>
    <string name="add_event_time">Time</string>
    <string name="add_event_from">From</string>
    <string name="add_event_choose_time_btn">Pick time</string>
    <string name="add_event_until">Until</string>
    <string name="lorem_ipsum_3p">Lorem ipsum</string>
    <string name="event_info_host">Event Host</string>
    <string name="event_info_join_button">Join event</string>
    <string name="event_info_attending">Attending</string>
    <string name="personal_area_page_title">My Events</string>
    <string name="upcoming_events_page_title">Events</string>
    <string name="local_events_page_title">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign out</string>
    <string name="map_satelliteTxt">Satellite</string>
    <string name="map_mapTxt">Map</string>
    <string name="map_hybridTxt">Hybrid</string>
</resources>
