<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutDirection="ltr"
            android:orientation="vertical"
            tools:context="com.example.shaha.mepo.AddEventActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/add_event_margin"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/add_event_img"
                    android:layout_width="@dimen/add_event_img_size_w"
                    android:layout_height="@dimen/add_event_img_size_h"
                    android:background="@drawable/circle"
                    android:padding="@dimen/add_event_img_padding"
                    android:src="@drawable/ic_photo_camera_white_48dp" />

                <EditText
                    android:id="@+id/add_event_event_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/add_event_txt_2_img_margin"
                    android:layout_weight="1"
                    android:hint="Event Name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/add_event_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_event_address"
                    android:textSize="@dimen/add_event_address" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/add_event_edit_text_address"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:enabled="false"/>
                    <ImageButton
                        android:id="@+id/add_event_pick_location_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_add_location_black_24dp"
                        android:contentDescription="@string/add_event_pick_location_desc"
                        android:padding="@dimen/add_event_margin"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/add_event_line_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_event_type"
                        android:textSize="@dimen/add_event_address" />

                    <Spinner
                        android:id="@+id/add_event_type_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/add_event_line_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_event_date"
                        android:textSize="@dimen/add_event_address" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/add_event_line_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_event_time"
                        android:textSize="@dimen/add_event_address"
                        android:layout_gravity="center"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="@dimen/add_event_margin">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/add_event_from"/>
                            <EditText
                                android:id="@+id/add_event_time_from_edit_text"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:enabled="false" />

                            <ImageButton
                                android:id="@+id/add_event_time_from_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_schedule_black_24dp"
                                android:padding="@dimen/add_event_margin"
                                android:contentDescription="@string/add_event_choose_time_btn"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/add_event_until"/>
                            <EditText
                                android:id="@+id/add_event_time_until_edit_text"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:enabled="false" />

                            <ImageButton
                                android:id="@+id/add_event_time_until_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_schedule_black_24dp"
                                android:padding="@dimen/add_event_margin"
                                android:contentDescription="@string/add_event_choose_time_btn"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/add_event_margin">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_event_fab_submit_event"
            android:layout_width="@dimen/add_event_submit"
            android:layout_height="@dimen/add_event_submit"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/add_event_margin"
            android:layout_marginStart="@dimen/add_event_margin"
            android:layout_marginLeft="@dimen/add_event_margin"
            android:padding="20dp"
            android:scaleType="center"
            android:src="@drawable/ic_done_white_24dp"
            app:fabSize="normal" />

    </RelativeLayout>
</RelativeLayout>
